[FIX] - Products slider jumping

--- a/css/style.css
+++ b/css/style.css
@@ -3265,60 +3265,6 @@ h6 {
   
 }
 
-/* #Products Swiper (3D Effect)
-================================================== */
-.products-swiper.swiper-container-coverflow .swiper-wrapper {
-  -ms-perspective: 1200px;
-  perspective: 1200px;
-}
-
-.products-swiper .swiper-slide {
-  -webkit-flex-shrink: 0;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-  width: 100%;
-  height: 100%;
-  position: relative
-}
-
-.products-swiper.swiper-container .swiper-notification {
-  position: absolute;
-  left: 0;
-  top: 0;
-  pointer-events: none;
-  opacity: 0;
-  z-index: -1000
-}
-
-.products-swiper.swiper-wp8-horizontal {
-  -ms-touch-action: pan-y;
-  touch-action: pan-y
-}
-
-.products-swiper.swiper-wp8-vertical {
-  -ms-touch-action: pan-x;
-  touch-action: pan-x
-}
-
-.products-swiper.swiper-container-3d {
-  -webkit-perspective: 1200px;
-  -o-perspective: 1200px;
-  perspective: 1200px
-}
-
-.products-swiper.swiper-container-3d .swiper-cube-shadow,
-.products-swiper.swiper-container-3d .swiper-slide,
-.products-swiper.swiper-container-3d .swiper-slide-shadow-bottom,
-.products-swiper.swiper-container-3d .swiper-slide-shadow-left,
-.products-swiper.swiper-container-3d .swiper-slide-shadow-right,
-.products-swiper.swiper-container-3d .swiper-slide-shadow-top,
-.products-swiper.swiper-container-3d .swiper-wrapper {
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d
-}
-
 /* #Text Banner
 ================================================== */
 .text-banner {
